--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ body {
 }
 
 .nav > .nav-links > a:hover {
-  background-color: rgba(0, 0, 0, 0.3), 0.3);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .nav > #nav-check {
