desafio contador con boton - clase componentes 2

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: 'Raleway', sans-serif;
 }
 
 body {
@@ -11,6 +12,9 @@ body {
   width: 100%;
   background-color: #fffdf9;
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav > .nav-header {
@@ -29,7 +33,6 @@ body {
 }
 
 .nav > .nav-links {
-  font-family: 'Raleway', sans-serif;
   display: inline-block;
   float: right;
   font-size: 18px;
@@ -53,16 +56,14 @@ body {
 
 .container-cart{
   display: inline;
-  margin: 50px;
 }
 
 .cartWidget{
-  width: 25px;
+  width: 30px;
 }
 
 .btn-cart {
   border: none;
-  padding: 1px;
   background: #3492d900;
   transition: ease .1s;
 }
@@ -70,6 +71,83 @@ body {
 .btn-cart:hover {
   transform:scale(1.1);
 }
+
+.container-title{
+  text-align: center;
+}
+
+/* start styles card sale */
+
+.container-description{
+  padding: 5%;
+}
+
+.container-itemCount{
+  width: 25%;
+  height: 50%;
+  border-radius: 11px;
+  background-color: #FFFFFF;
+  box-shadow: 0 0 10px 3px #0000001f;
+  display: inline-block;
+  text-align: center;
+}
+.container-btnCart{
+  width: 100%; 
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0%;
+}
+.count{
+  margin: 0;
+}
+.btn-remove, .btn-add{
+  display: inline;
+  border-radius: 100px;
+  color: #337FED;
+  font-size: 30px;
+  font-weight: 1;
+  padding: 10px;
+  background-color: rgba(61, 148, 246, 0);
+  border: solid #337FED 1px;
+  text-align: center;
+  transition: .1s;
+}
+.count{
+  display: inline;
+}
+.btn-remove:hover, .btn-add:hover {
+   color: white;
+   background: #337FED;
+   border: solid #337FED 1px;
+   -webkit-border-radius: 100px;
+   -moz-border-radius: 100px;
+   border-radius: 100px;
+}
+.btn-addToCart{
+  width: 100%;
+  display: inline;
+  border-radius: 100px;
+  color: #337FED;
+  font-size: 18px;
+  font-weight: 100;
+  padding: 8px 15px;
+  margin: 5% 0%;
+  background-color: rgba(61, 148, 246, 0);
+  border: solid #337FED 1px;
+  text-align: center;
+  transition: .1s;
+}
+.btn-addToCart:hover {
+   color: white;
+   background: #337FED;
+   border: solid #337FED 1px;
+   -webkit-border-radius: 100px;
+   -moz-border-radius: 100px;
+   border-radius: 100px;
+}
+
+/* end styles card sale */
 
 @media (max-width:600px) {
   .nav > .nav-btn {
