--- a/src/App.css
+++ b/src/App.css
@@ -82,22 +82,12 @@ body {
   padding: 5%;
 }
 
-/* .container-itemCount{
-  width: 25%;
-  height: 50%;
-  border-radius: 11px;
-  background-color: #FFFFFF;
-  box-shadow: 0 0 10px 3px #0000001f;
-  display: inline-block;
-  text-align: center;
-} */
-
 .container-product{
   width: 25%;
   height: 50%;
   border-radius: 11px;
   background-color: #FFFFFF;
-  box-shadow: 0 0 10px 3px #0000001f;
+  box-shadow: 0 0 8px .5px #0000001f;
   display: inline-block;
   text-align: center;
   margin: 1%;
