--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,10 @@ body {
   margin: 1%;
 }
 
+.container-product img{
+  width: 100%;
+}
+
 .container-btnCart{
   width: 100%; 
   display: flex;
@@ -151,17 +155,24 @@ body {
 
 /* itemDetail styles start*/
 .container-itemDetail{
-  background-color: #fffdf9; 
+  background-color: #fffdf9;
   width: 80%;
   margin: auto; 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .container-itemDetail img{
   display: inline-block;
+  width: 50%;
+  padding: 5%;
 }
 
 .container-description__detail{
   display: inline-block;
+  width: 50%;
+  text-align: center;
 }
 
 @media (max-width:600px) {
