--- a/src/App.css
+++ b/src/App.css
@@ -188,6 +188,34 @@ body {
   justify-content: center;
 }
 
+.footer-container{
+  width: 100%;
+  background-color: #fffdf9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+}
+
+.footer-links{
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer-links .link{
+  text-decoration: none;
+}
+
+.footer-links div{
+  display: inline-block;
+}
+
 @media (max-width:600px) {
   .nav > .nav-btn {
     display: inline-block;
