--- a/src/App.css
+++ b/src/App.css
@@ -4,24 +4,10 @@
 }
 
 body {
-  margin: 0px;
+  margin-top: 80px !important;
 }
 
-.nav {
-  height: 60px;
-  width: 100%;
-  background-color: #fffdf9;
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.nav > .nav-header {
-  display: inline;
-}
-
-.nav > .nav-header > .nav-title {
+.nav-title {
   font-family: 'Gloria Hallelujah', cursive;
   display: inline-block;
   font-size: 40px;
@@ -29,29 +15,14 @@ body {
   text-decoration: none;
 }
 
-.nav > .nav-btn {
-  display: none;
+.nav{
+  position: fixed !important;
+  z-index: 1;
+  margin-top: -80px;
 }
 
-.nav > .nav-links {
-  display: inline-block;
-  font-size: 18px;
-}
-
-.nav > .nav-links > a {
-  display: inline-block;
-  padding: 13px 10px 13px 10px;
-  text-decoration: none;
-  color: #000000;
-  transition: ease .1s;
-}
-
-.nav > .nav-links > a:hover {
-  transform:scale(1.1);
-}
-
-.nav > #nav-check {
-  display: none;
+.greeting{
+  padding: 50px;
 }
 
 .container-cart{
@@ -75,6 +46,34 @@ body {
 .container-title{
   text-align: center;
 }
+
+.text-small {
+  font-size: 0.9rem;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+a:hover, a:focus {
+  text-decoration: none;
+}
+
+.form-control {
+  background: #eeeeee;
+  border-color: #eeeeee;
+}
+
+.form-control:focus {
+  background: #eeeeee;
+}
+
+footer {
+  background: #eeeeee;
+}
+
 
 /* start styles card sale */
 
@@ -164,7 +163,7 @@ body {
    color: white;
    background: #337FED;
    border: solid #337FED 1px;
-}
+} */
 /* end styles card sale */
 
 /* itemDetail styles start*/
@@ -194,6 +193,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+} */
+
+footer{
+  margin-top: 40px;
 }
 
 .footer-container{
@@ -224,7 +227,21 @@ body {
   display: inline-block;
 }
 
-/* cart styles start */
+.footer-img{
+  margin-bottom: 5%;
+  filter: invert(.5);
+}
+
+.footer-containerSocial{
+  margin: 30px 0;
+}
+
+.footer-containerSocial img{
+  width: 30px;
+  height: auto;
+  margin: 0 10px;
+  filter: invert(.5);
+}
 
 /* .container-itemCart{
   width: 80%;
@@ -303,4 +320,4 @@ body {
     height: calc(100vh - 50px);
     overflow-y: auto;
   }
-} */
+}*/
