--- a/src/App.css
+++ b/src/App.css
@@ -156,9 +156,9 @@ footer {
 }
 
 .itemDetail-container{
-  margin-top: 120px;
+  /* margin-top: 120px; */
 }
 
-.container-cart{
+.cart-container{
   margin-top: 130px;
 }
