--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@ body{
   text-decoration: none;
 }
 
+.nav-title:hover{
+  transform:scale(1.1);
+}
+
 .nav{
   background-color: rgb(255, 253, 248);
 }
@@ -86,13 +90,17 @@ a:hover, a:focus {
 }
 
 .dispatchImg{
-  background-color: rgb(236, 249, 255);
-  border-radius: 100%;
-  margin: 0;
+  /* background-color: rgb(236, 249, 255) !important;
+  border-radius: 100% !important;
+  margin: 0 !important; */
 }
 
 .dispatchImg img{
   padding: 20%;
+  background-color: rgb(236, 249, 255);
+  border-radius: 40%;
+  border: none;
+  margin: 0;
 }
 
 footer {
